Add GET /api/v1/repo
- Update swagger
- Add new type GitCommit to describe the HEAD of the local config git repository
  used by the scheduler
